# gal

./: CMakeLists.txt  README.md
include/gal/: surface.hpp
include/gal/ds/: half_edge.hpp  surface.hpp
include/gal/prim/: bezier_surface.hpp  cube.hpp  sphere.hpp  utah_teapot.hpp
include/gal/util/: factorial.h  obj_serializer.hpp  vector.hpp
sample/: CMakeLists.txt  bezier_test.cpp  cube_test.cpp  factorial_test.cpp  main.cpp  sphere_test.cpp  utah_teapot_test.cpp
src/: surface.cpp
src/ds/: surface.cpp
src/prim/: bezier_surface.cpp  cube.cpp  sphere.cpp  utah_teapot.cpp
src/util/: obj_serializer.cpp  vector.cpp
