add_executable(factorial_test
	factorial_test.cpp
)

target_link_libraries(factorial_test	
	gal
)

add_executable(utah_teapot_test
	utah_teapot_test.cpp
)

target_link_libraries(utah_teapot_test	
	gal
)

add_executable(sphere_test
	sphere_test.cpp
)

target_link_libraries(sphere_test
	gal
)

add_executable(cube_test
	cube_test.cpp
)

target_link_libraries(cube_test
	gal
)